# idf-im-ui

./: Cargo.toml  INSTALLATION_DISTRIBUTION.md  TAURI_XTASK_INTEGRATION.md
.cargo/: config.toml  xtask.sh
docs/src/: cli_configuration.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: app.yml
src-tauri/src/cli/: prompts.rs  wizard.rs
src-tauri/src/gui/commands/: idf_tools.rs
src/locales/: cn.json  en.json
xtask/: Cargo.toml
xtask/src/: main.rs
